# sqlite-ast-conformance

./: .gitignore  Makefile  README.md  dump_ast.c  generate_test.py  pyproject.toml  test_ast.py
.github/workflows/: publish.yml  test.yml
ast-tests/: clause_distinct.json  clause_group_by.json  clause_order_by_nulls.json  clause_where_complex.json  compound_intersect.json  compound_with_order.json  expr_between.json  expr_bitwise.json  expr_case_searched.json  expr_case_simple.json  expr_collate.json  expr_exists.json  expr_glob.json  expr_in_list.json  expr_in_subquery.json  expr_is_not_false.json  expr_is_not_null.json  expr_is_true.json  expr_like.json  expr_logical.json  expr_subquery.json  expr_unary.json  from_alias.json  from_join_full_outer.json  from_join_multiple.json  from_multiple_tables.json  func_coalesce.json  func_count_distinct.json  func_simple.json  nested_subquery_from.json  param_positional.json  select_boolean.json  select_column.json  select_literal.json  select_multiple_literals.json  select_null.json  select_qualified_column.json  select_star.json  select_star_from.json  select_string.json  (+9 more)
sqlite_ast_conformance/: __init__.py
sqlite_ast_conformance/ast-tests/: clause_all.json  clause_having.json  clause_limit.json  clause_limit_offset.json  clause_order_by.json  clause_where.json  compound_except.json  compound_triple.json  compound_union.json  compound_union_all.json  correlated_subquery.json  expr_arithmetic.json  expr_cast.json  expr_comparison.json  expr_is_null.json  expr_string_concat.json  from_join_cross.json  (+24 more)
tests/: test_ast.py
